--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^5.1.0",
     "framer-motion": "^12.23.12",
     "next": "15.5.2",
+    "next-seo": "^6.8.0",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^7.0.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
