--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next-sitemap",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "eslint"
   },
@@ -15,7 +16,6 @@
     "express": "^5.1.0",
     "framer-motion": "^12.23.12",
     "next": "15.5.2",
-    "next-seo": "^6.8.0",
     "next-sitemap": "^4.2.3",
     "nodemailer": "^7.0.6",
     "react": "19.1.0",
