--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next-sitemap",
-    "postbuild": "next-sitemap",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -17,7 +16,7 @@
     "express": "^5.1.0",
     "framer-motion": "^12.23.12",
     "next": "15.5.2",
-    "next-sitemap": "^4.2.3",
+    
     "nodemailer": "^7.0.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
