--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
-    "next": "15.5.2",
+    "next": "^16.0.7",
     "nodemailer": "^7.0.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "sharp": "^0.34.4"
   },
@@ -41,7 +41,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "typescript": "^5"
